<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="placeholder image"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_recipe_name"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:textColorHint="#ddd" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ingredient_container" />

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="30dp"
            android:layout_margin="30dp"
            android:text="@string/add_more" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/directions" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_recipe_directions"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:textColorHint="#ddd"
            android:maxLines="250"/>

        <Button
            android:id="@+id/btn_save_dish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="40dp"
            android:text="@string/save_dish" />

    </LinearLayout>
</ScrollView>
