<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/myImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:src="@mipmap/placeholder_small" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:foregroundGravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:maxHeight="10dp"
                    android:paddingBottom="10dp"
                    android:src="@mipmap/new_dish_small" />


            </FrameLayout>

        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_recipe_name"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="#ddd"
            android:id="@+id/dish_name"/>

        <TextView
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients" />

        <com.thedeveloperworldisyours.listviewinsidescrollview.view.NonScrollListView
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_more" />


        <TextView
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/directions" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_recipe_directions"
            android:inputType="textMultiLine|textCapSentences|textAutoComplete|textAutoCorrect"
            android:maxLines="10"
            android:minHeight="200dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="#ddd"
            android:selectAllOnFocus="true"
            android:id="@+id/dish_directions"/>

        <Button
            android:id="@+id/btn_save_dish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="80dp"
            android:text="@string/save_dish" />

    </LinearLayout>

</ScrollView>

