<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/displayInfo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@mipmap/app_banner" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/meals"
                android:gravity="center"
                android:text="@string/meals"
                android:id="@+id/meals_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/recipes"
                android:gravity="center"
                android:text="@string/recipes"
                android:id="@+id/recipes_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/groceries"
                android:gravity="center"
                android:text="@string/groceries"
                android:id="@+id/groceries_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/new_dish"
                android:gravity="center"
                android:text="@string/new_dish"
                android:id="@+id/new_icon" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
