<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="match_parent" android:minWidth="300dp">

    <TextView
        android:text="Author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="69dp"
        android:textAlignment="textEnd"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:text="Version No.:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="18dp"
        android:id="@+id/textView3"
        android:textAlignment="textStart" />

    <TextView
        android:text="0.0.0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:id="@+id/textView4"
        android:textAlignment="textStart"
        android:layout_alignTop="@+id/textView3" />

    <TextView
        android:text="@string/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:id="@+id/help_url"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:id="@+id/textView6" />

    <TextView
        android:text="@string/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAlignment="textStart"
        android:layout_marginEnd="46dp"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentEnd="true" />
</RelativeLayout>